Fix blockquote overflow view on mobile devices

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -126,3 +126,11 @@
     padding: 5px 1rem;
     background-color: #1e1f26;
 }
+
+@media (max-width: 992px) {
+    ::ng-deep blockquote {
+        width: calc(100% - 2rem);
+        margin-inline-end: 0;
+        margin-inline-start: 0;
+    }
+}
